--- a/index.html
+++ b/index.html
@@ -5,7 +5,139 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
+    <header class="page-header">
+     <nav class="navigation">
+       <ul class="navigation-list">
+        <li class="navigation-item">
+        <a class="navigation-link" href="catalog.html">Главная</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="catalog.html">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>      
+       </ul>
+       <ul class="navigstion-list navigation-user">
+        <li class="navigation-item navigation-user">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">
+            Поиск
+          </span>
+          </a>
+          </li>
+          <li class="navigation-item navigation-user">
+            <a class="navigation-link" href="#">
+            <span class="visually-hidden">
+              favorite
+            </span> 
+          </a> 
+          </li>
+            <li class="navigation-item navigation-user">
+              <a class="navigation-link" href="#l">
+              <span class="visually-hidden">
+                Хочу сюда!
+              </span>  
+            </a>
+            </li>       
+       </ul> 
+     </nav> 
+    </header>
+    <main class="main-index">
+     <h1 class="visually-hiden"> Добро пожаловать в Седона </h1>
+     <img class= "logo" src="" alt="Описание картинки">
+     <h2 class="sedona">Седона — небольшой городок в Аризоне,
+      заслуживающий большего!</h2>
+      <p class="sedona-title">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+      <section class="advantages">
+        <h3 class="visually-hidden">Преимущества Седона</h3>
+        <ul class="advantages-list">
+        <li class="advantages-item">
+          <h4 class="advantages-title">Настоящий городок </h4>
+          <p class="advantages-description">-№1-</p>
+          <p class="advantages-description">Седона — не аттракцион для туристов, там течёт 
+            своя жизнь</p>
+            <img class="logo2" src="" alt="Описание картинки">
+            <h4 class="advantages-title">Жильё</h4>
+            <p class="advantages-description">Рекомендуем пожить 
+              в настоящем мотеле, всё как в кино!</p>  
+              <img class="icon" src="" alt="Иконка">
+              <h4 class="advantages-title">Еда</h4>
+              <p class="advantages-description">Всегда заказывайте
+                топовый фирменный бургер, вы не разочаруетесь!</p>  
+                <img class="icon2" src="" alt="Иконка">
+                <h4 class="advantages-title">Сувениры</h4>
+                <p class="advantages-description">Не только китайского, 
+                  но и настоящего местного производства!</p>  
+                  <img class="icon3" src="" alt="Иконка">
+          <h4 class="advantages-title">Там есть
+            мост дьявола </h4>
+          <p class="advantages-description">-№2-</p>
+          <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img class="logo3" src="" alt="Описание картинки">
+          <h4 class="advantages-title">Небольшая площадь </h4>
+            <p class="advantages-description">-№3-</p>
+            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+              <img class="icon4" src="" alt="Иконка">
+          <h4 class="advantages-title">Красивая дорога </h4>
+              <p class="advantages-description">-№4-</p>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                <img class="icon5" src="" alt="Иконка">
+          <h4 class="advantages-title">Мало туристов </h4>
+                <p class="advantages-description">-№5-</p>
+                <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+                  <img class="icon6" src="" alt="Иконка">
+        </li>
+        </ul>
+      </section>
+      <h2 class="sedona">Заинтересовались?</h2>
+        <p class="sedona-title">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне </p>
+      <h2 class="sedona">Подпишитесь на рассылку</h2>
+        <p class="sedona-title">Только полезная информация и никакого спама, честное бойскаутское! </p>
+      <form class="newsletter-form" action="#" method="post">
+        <label for="newsletter-email">Email</label>
+        <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email"
+        id="newsletter-email" required>
+        <button class="button newsletter-buton" type="submit">
+          <span>Подписаться</span>
+        </button>
+      </form>
+     <footer class="page-footer">
+       <section class="footer-social">
+         <h2 class="page-footer-title">Социальные сети</h2>
+         <ul class="footer-social-list">
+           <li class="footer-social-item">
+             <a class="buton" href="https://twitter.com/htmlacademy_ru">
+               <span class="vissualy-hiden">Twitter</span>
+             </a>
+           </li>
+           <li class="footer-social-item">
+            <a class="buton" href="https://www.facebook.com/htmlacademy">
+              <span class="vissualy-hiden">Facebook</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="buton" href="https://www.youtube.com/c/HTMLAcademyRUS">
+              <span class="vissualy-hiden">Youtube</span>
+            </a>
+          </li>
+         </ul>
+       </section>
+       <section class="footer-contacts">
+         <h2 class="vissualy-hidden">Контакты</h2>
+         <a href="tel: +78128121212">+7 (812) 812-12-12</a>
+       </section>
+       <section class="footer-academy">
+        <h2 class="page-footer-academy">Логотип .html academy </h2>
+        <div class="footer-html-academy">
+            <a class="buton" href="https://htmlacademy.ru/">
+              <span class="vissualy-hiden">html academy</span>
+            </a>
+          </div>
+          </section>
+     </footer>
+      
+    </main>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
   </body>
