--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <header class="page-header">
      <nav class="navigation">
        <ul class="navigation-list">
+         <li class="navigation-logo">
+           <a class="navigation-link" href="#">
+             <span class="visully-hiden"> Логотип Седона </span>
+             <img class="logotip-Sedona" src="" alt="Логотип Седона">
+           </a>
+         </li>
         <li class="navigation-item">
         <a class="navigation-link" href="catalog.html">Главная</a>
         </li>
@@ -34,7 +40,7 @@
           </a> 
           </li>
             <li class="navigation-item navigation-user">
-              <a class="navigation-link" href="#l">
+              <a class="navigation-link" href="#">
               <span class="visually-hidden">
                 Хочу сюда!
               </span>  
